# serie_temporal_dpe_rn

./: pyproject.toml  teste.ipynb
api/: README.md  config.py  main.py  models.py  prepare_data_test.py  services.py  usage_example.ipynb
api/test_data/: df_test.parquet  df_train.parquet
input_data/: anexo1_daily.parquet  anexo3_daily.parquet  holidays_natalrn.parquet  mossoro_daily.parquet  parnamirim_daily.parquet
