[tool.poetry]
name = "serie-temporal-dpe-rn"
version = "0.1.0"
description = ""
authors = ["Elias Jacob <contato@eliasjacob.com.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
pandas = "^2.2.3"
sktime = {extras = ["all-extras"], version = "^0.34.0"}
ipykernel = "^6.29.5"
ipywidgets = "^8.1.5"
fastparquet = "^2024.5.0"
pyarrow = "^18.0.0"
matplotlib = "^3.9.2"
plotly = "^5.24.1"
plotly-express = "^0.4.1"
nbformat = "^5.10.4"
prophet = "^1.1.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
